ISSUE:  700  PURPOSE:  Menu styles to keep login visible.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1582,6 +1582,7 @@ textarea {
 	top:-3px;
 	font-size: .85em;
 }
+.form-login {position:absolute;top:2px;right:.5em;}
 /****************end small form fields*********************/
 /**********************************************************/
 /*********************************/
